[FIX] website_sale: cart entries will not overflow in mobile eCommerce page
Before the change, in the mobile version of the eCommerce cart, if a product
had a name that was too long or the font size was too big it would push the
elements to its right offscreen.
After the change, the overflow of a product name that is too long or too big
gets replaced with ellipsis, keeping the elements to its right from beign
pushed offscreen.

task-4260720
opw-4253880

closes odoo/odoo#187698

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -992,3 +992,9 @@ a.no-decoration {
 .o_categories_recursive_button:after {
     display: none;
 }
+
+.text-overflow-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
